crates/tooling/sysml-lsp-server/src/snapshots/sysml_lsp_server__snapshot_tests__snapshot_diagnostics_book_cm_views.snap
---
source: crates/tooling/sysml-lsp-server/src/snapshot_tests.rs
expression: rendered
---
[IM006] error @ "import Requirements::*;"
  import references unknown standard library namespace 'Requirements'
  note: valid namespaces: ScalarValues, ISQ, SI, Collections, Performances, Parts, Connections, Ports, Interfaces, Items, Actions, States, Constraints, Requirements, Calculations, ...
[IM001] info @ "import Definitions::*;"
  import references namespace 'Definitions' (unresolved in current workspace context)
  note: checked current file and loaded standard library only; open the project/workspace folder so cross-file imports can be indexed
