crates/tooling/sysml-lsp-server/src/snapshots/sysml_lsp_server__snapshot_tests__snapshot_diagnostics_constraints_and_requirements.snap
---
source: crates/tooling/sysml-lsp-server/src/snapshot_tests.rs
assertion_line: 492
expression: rendered
---
[----] error @ "part"
  Unexpected keyword `part`
  note: after `subject`
[RQ001] warning @ "satisfy requirement safety by Vehicle;"
  satisfy 'safety' cannot resolve its requirement reference
  note: ensure the requirement name matches an existing requirement definition
[CN005] info @ "constraint speedLimit;"
  constraint 'speedLimit' has no expression to evaluate
[RQ002] info @ "requirement def PerformanceRequirement {\n        attribu..."
  requirement 'PerformanceRequirement' is not satisfied by any element
[RQ003] info @ "requirement def PerformanceRequirement {\n        attribu..."
  requirement 'PerformanceRequirement' has no verification case
