crates/tooling/sysml-lsp-server/src/snapshots/sysml_lsp_server__snapshot_tests__snapshot_diagnostics_corrupted_line.snap
---
source: crates/tooling/sysml-lsp-server/src/snapshot_tests.rs
expression: rendered
---
[----] error @ "Bad"
  Syntax error near `Bad` in definition of `Goodpackage`
  note: after `Goodpackage`
