crates/tooling/sysml-lsp-server/src/snapshots/sysml_lsp_server__snapshot_tests__snapshot_diagnostics_duplicate_names.snap
---
source: crates/tooling/sysml-lsp-server/src/snapshot_tests.rs
assertion_line: 433
expression: rendered
---
[S001] warning @ "part def Foo;"
  'Foo': duplicate definition 'Foo' is already defined in this scope
