crates/tooling/sysml-lsp-server/src/snapshots/sysml_lsp_server__snapshot_tests__snapshot_diagnostics_missing_semicolon.snap
---
source: crates/tooling/sysml-lsp-server/src/snapshot_tests.rs
expression: rendered
---
[----] error @ "o"
  expected `;` after 'Foo' in definition
